Agregado localStorage y arreglado bug con Safari en CSS

--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@
 body{
   display: grid;
   grid-template-columns: 350px 1fr;
-  margin:0 ;
+  margin:0;
   font-family: 'Lato', sans-serif;
 }
 
@@ -41,8 +41,6 @@ body{
 .header #searchBar{
   width: 200px;
   margin: 15px 20px;
-  -webkit-box-shadow: 0px 0px 32px -9px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 32px -9px rgba(0,0,0,0.75);
   box-shadow: 0px 0px 20px -9px rgba(0,0,0,0.75); 
   padding: 15px;
   background: #f0f0f0;
@@ -59,8 +57,8 @@ body{
   height: 100vh;
   display: grid;
   grid-template-rows: 100px 1fr 1fr;
-  padding: 10px;
-  bottom: 0;
+  padding: 0 10px;
+  padding-bottom: 0;
 }
 
 .sidebar .image{
@@ -117,6 +115,7 @@ body{
 .PlaylistAmigos {
   overflow: scroll;
   height: 100%;
+  max-height: 350px;
 }
 
 .PlaylistAmigos li{
@@ -157,8 +156,6 @@ body{
 .header #searchBar{
   width: 200px;
   margin: 15px 20px;
-  -webkit-box-shadow: 0px 0px 32px -9px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 32px -9px rgba(0,0,0,0.75);
   box-shadow: 0px 0px 20px -9px rgba(0,0,0,0.75); 
   padding: 15px;
   background: #f0f0f0;
