--- a/css_dev/sidebar.css
+++ b/css_dev/sidebar.css
@@ -5,8 +5,8 @@
   height: 100vh;
   display: grid;
   grid-template-rows: 100px 1fr 1fr;
-  padding: 10px;
-  bottom: 0;
+  padding: 0 10px;
+  padding-bottom: 0;
 }
 
 .sidebar .image{
@@ -63,6 +63,7 @@
 .PlaylistAmigos {
   overflow: scroll;
   height: 100%;
+  max-height: 350px;
 }
 
 .PlaylistAmigos li{
